Add a checkbox to remember email address

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -11,6 +11,9 @@
 	"yourEmailAddress": {
 		"message": "E-Mail:"
 	},
+	"always": {
+		"message": "Denken Sie daran, E-Mail"
+	},
 	"lifeSpan": {
 		"message": "Gültigkeitsdauer : "
 	},
