--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -11,6 +11,9 @@
 	"yourEmailAddress": {
 		"message": "Correo electrónico :"
 	},
+	"always": {
+		"message": "Recuerde correo electrónico"
+	},
 	"lifeSpan": {
 		"message": "Duración de validez :"
 	},
